# angularAnalysis

./: CMakeLists.txt
include/: fit.h  individualTimeDependent.h  newTimeDependentFit.h  parameterValues.h  plotting.h  run.h  timeDependentFit.h
src/: fit.cpp  individualTimeDependent.cpp  main.cpp  newTimeDependentFit.cpp  plotting.cpp  run.cpp  timeDependentFit.cpp
